--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -21,7 +21,25 @@
             <artifactId>jscience</artifactId>
             <version>4.3.1</version>
         </dependency>
-
-
     </dependencies>
+
+
+            <build>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>(whatever version is current)</version>
+                        <configuration>
+                            <!-- or whatever version you use -->
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+
+            </build>
+
+
 </project>
